# openeo-cwl-sample

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
cwl/: openeo-sample.cwl  params.json
cwl/c4gbl4z5/output_catalog/: catalog.json
cwl/c4gbl4z5/output_catalog/CLC2018/: collection.json
cwl/c4gbl4z5/output_catalog/MOD10A1v61/: collection.json
cwl/c4gbl4z5/output_catalog/SENTINEL2_L2A_SAMPLE_2/: collection.json
logs/: cwl_log_dump.txt
src/: read_write_stac.py
zoo-project-dru/: app_requests.http  app_requests_tosca.http  curl_requests.txt
